--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/coffee-api
-spring.datasource.username=postgres
-spring.datasource.password=Corisande76
+# database configuration info
+spring.datasource.url=jdbc:h2:file:~/data/edscorbot
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JAP configuration info
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.jdbc.lab.non_contextual_creation=true
