Atualizacoes pontuais e limpeza do POM.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+# swagger configuration
+springdoc.swagger-ui.use-root-path=true
+
 # database configuration info
-spring.datasource.url=jdbc:h2:file:~/data/edscorbot
+spring.datasource.url=jdbc:h2:file:~/data/coffee
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
